# exo-site

./: Cargo.toml  README.md  Trunk.toml  run.sh
.github/workflows/: deploy.yml
src/: exo_info.rs  main.rs
