[package]
name = "exo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.3.0"
gloo-net = "0.5.0"
serde = "1.0.195"
wasm-bindgen-futures = "0.4.39"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
